feat: update package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
 {
-  "author": "Nick Pham <nickpham@nooplabs.com>, source from socket-tunnel (Eric Barch <ebarch@nooplabs.com>)",
   "name": "nport",
+  "version": "1.0.2",
   "description": "Tunnel HTTP Connections via socket.io streams.",
-  "version": "1.0.1",
+  "keywords": ["tunnel", "socket.io", "http", "streaming", "networking", "proxy"],
+  "homepage": "https://github.com/tuanngocptn/nport#readme",
+  "bugs": {
+    "url": "https://github.com/tuanngocptn/nport/issues",
+    "email": "tuanngocptn@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tuanngocptn/nport.git"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Nick Pham",
+    "email": "tuanngocptn@gmail.com"
+  },
+  "contributors": [
+    {
+      "name": "Eric Barch",
+      "email": "ebarch@nooplabs.com"
+    }
+  ],
   "dependencies": {
     "is-valid-domain": "0.0.5",
     "optimist": "^0.6.1",
@@ -15,5 +35,20 @@
   "bin": {
     "nport": "./bin/client"
   },
-  "license": "MIT"
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "files": [
+    "bin/",
+    "client.js",
+    "server.js",
+    "lib/",
+    "examples/",
+    "nginx.conf.sample"
+  ],
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/tuanngocptn"
+  }
 }
